# celery-rabbitmq-pubsub-test

./: .pre-commit-config.yaml  README.md  celery_app.py  celeryconfig.py  dev.Dockerfile  docker-compose.yaml  pyproject.toml
app/api/: main.py  router.py  views.py
app/tasks/: __init__.py  data_aggregation.py  data_validation.py
rabbitmq_config/: rabbitmq_enabled_plugins
